codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__consecutive_commands_render_as_compact_group.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Using tools
  └ Ran echo first
    Ran echo second
